Fixed alignment of nav menu on LifeU subpages

--- a/components/sass/_lifeu.scss
+++ b/components/sass/_lifeu.scss
@@ -2,9 +2,13 @@
 
 	header {
 		@extend .header;
-		background: url(../img/lifeu/lifeu_header.png) 50% 50% no-repeat, $blue;
-		@include at-breakpoint($beta) {
-			background-position: 10% 50%;
+		background: $blue;
+		nav {
+			margin-left: 50px;
+			background: url(../img/lifeu/lifeu_header.png) 50% 50% no-repeat;
+			@include at-breakpoint($beta) {
+				background-position: 0 50%;
+			}
 		}
 	}
 
