--- a/components/sass/_lifeucontact.scss
+++ b/components/sass/_lifeucontact.scss
@@ -1,9 +1,12 @@
 .lifeu .contact {
 	
 	header {
-		background: url(../img/lifeu/lifeu_header.png) 50% 50% no-repeat, $orange;
-		@include at-breakpoint($beta) {
-			background-position: 10% 50%;
+		background: $orange;
+		nav {
+			background: url(../img/lifeu/lifeu_header.png) 50% 50% no-repeat;
+			@include at-breakpoint($beta) {
+				background-position: 0 50%;
+			}
 		}
 	}
 
