--- a/components/sass/_lifeudestination.scss
+++ b/components/sass/_lifeudestination.scss
@@ -1,9 +1,12 @@
 .lifeu .destination {
 	
 	header {
-		background: url(../img/lifeu/lifeu_header.png) 50% 50% no-repeat, $dark-gray;
-		@include at-breakpoint($beta) {
-			background-position: 10% 50%;
+		background: $dark-gray;
+		nav {
+			background: url(../img/lifeu/lifeu_header.png) 50% 50% no-repeat;
+			@include at-breakpoint($beta) {
+				background-position: 0 50%;
+			}
 		}
 	}
 
