--- a/components/sass/_lifeusub.scss
+++ b/components/sass/_lifeusub.scss
@@ -6,7 +6,7 @@
 
 	@include nav-menu;
 	nav ul {
-			padding: 3em 1.5em;
+			padding: 3em 1.5em 3em 0;
 		li {
 			float: left;		
 		}		
